objects/Security_Vulnerability__c.object
<CustomObject>
    <description>Used for Security Vulnerability management, object owned by the Security team.</description>
    <fields>
        <fullName>CVE__c</fullName>
        <label>CVE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVSS_Score__c</fullName>
        <label>CVSS Score</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVSS__c</fullName>
        <label>CVSS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWE__c</fullName>
        <label>CWE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exploit_Maturity__c</fullName>
        <label>Exploit Maturity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Import_Name__c</fullName>
        <label>Import Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported_Date__c</fullName>
        <label>Imported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introduced_Date__c</fullName>
        <inlineHelpText>The date this Vulnerability was introduced into Copado&apos;s systems</inlineHelpText>
        <label>Introduced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_File__c</fullName>
        <label>Location (File)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Package__c</fullName>
        <label>Location (Package)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_System__c</fullName>
        <label>Location (System)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_of_Report__c</fullName>
        <label>Origin of Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Responsible Disclosure Program</fullName>
                </value>
                <value>
                    <fullName>Google Image Scanner</fullName>
                </value>
                <value>
                    <fullName>Google Search Console</fullName>
                </value>
                <value>
                    <fullName>Penetration Test</fullName>
                </value>
                <value>
                    <fullName>Public Disclosure (The Wild)</fullName>
                </value>
                <value>
                    <fullName>Qualys</fullName>
                </value>
                <value>
                    <fullName>Snyk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Manager__c</fullName>
        <label>Package Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remediation_Guidance__c</fullName>
        <label>Remediation Guidance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Due_Date__c</fullName>
        <label>SLA Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Length_Days__c</fullName>
        <label>SLA Length (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Overdue_By_Days__c</fullName>
        <formula>IF(
ISBLANK(Vulnerability_Closed_Date__c) , 
IF(TODAY() - SLA_Due_Date__c  &gt; 0, TODAY() - SLA_Due_Date__c, null ),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Overdue By (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Start_Date__c</fullName>
        <label>SLA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Status__c</fullName>
        <formula>IF(TODAY()&gt;= SLA_Start_Date__c ,

   IF(TODAY() &lt;= SLA_Due_Date__c , 
   &quot;SLA Window In Progress&quot;, 
   IF( Vulnerability_Closed_Date__c &lt;= SLA_Due_Date__c, &quot;SLA Met&quot;, &quot;SLA Missed&quot;) 
   ), 

   &quot;SLA Window Not Started&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Time_Remaining_Days__c</fullName>
        <formula>IF(
ISBLANK(Vulnerability_Closed_Date__c) , 
IF(SLA_Due_Date__c -  TODAY() &gt;= 0, SLA_Due_Date__c -  TODAY(), 0 ),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Time Remaining (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Time_to_Resolution_Days__c</fullName>
        <formula>IF(
NOT(ISBLANK(Vulnerability_Closed_Date__c)) , 
IF(Vulnerability_Closed_Date__c - SLA_Start_Date__c  &gt;= 0, Vulnerability_Closed_Date__c - SLA_Start_Date__c , null),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Time to Resolution (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <label>SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FedRAMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Severity__c</fullName>
        <inlineHelpText>Severity Options: Critical (P0), High (P1), Medium (P2), Low (P3), Informational (P4)</inlineHelpText>
        <label>Security Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Security_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snyk_Fixed_Date__c</fullName>
        <inlineHelpText>Date that Snyk considered this vulnerability fixed</inlineHelpText>
        <label>Snyk Fixed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snyk_Is_Fixed__c</fullName>
        <inlineHelpText>Vulnerability shows up as Fixed in Snyk</inlineHelpText>
        <label>Snyk - Is Fixed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snyk_Is_Ignored__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether this vulnerability has been marked as &quot;Ignored&quot; in Snyk</inlineHelpText>
        <label>Snyk - Is Ignored?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snyk_Issue_Type__c</fullName>
        <label>Snyk Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>vuln</fullName>
                </value>
                <value>
                    <fullName>license</fullName>
                </value>
                <value>
                    <fullName>configuration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snyk_Link__c</fullName>
        <label>Snyk Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Snyk_Priority_Score__c</fullName>
        <label>Snyk Priority Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snyk_Project_ID__c</fullName>
        <label>Snyk Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Assigned to Investigation</fullName>
                </value>
                <value>
                    <fullName>Assigned to User Story</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Fixed, Ready for Release</fullName>
                </value>
                <value>
                    <fullName>Closed - Released to Production</fullName>
                </value>
                <value>
                    <fullName>Closed - Will Not Fix</fullName>
                </value>
                <value>
                    <fullName>Closed - False Positive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story (In Beta)</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipName>Security_Vulnerability</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vulnerability_Closed_Date__c</fullName>
        <label>Vulnerability Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vulnerability_Current_Version__c</fullName>
        <label>Vulnerability Current Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vulnerability_Description__c</fullName>
        <label>Vulnerability Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Vulnerability_Disclosure_Time__c</fullName>
        <label>Vulnerability Disclosure Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vulnerability_Name__c</fullName>
        <label>Vulnerability Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vulnerability_Publication_Time__c</fullName>
        <label>Vulnerability Publication Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vulnerable_Versions__c</fullName>
        <label>Vulnerable Versions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Security Vulnerability (In Beta)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Origin_of_Report__c</columns>
        <columns>Location_File__c</columns>
        <columns>Location_System__c</columns>
        <columns>Vulnerability_Name__c</columns>
        <columns>Vulnerability_Description__c</columns>
        <columns>Snyk_Is_Fixed__c</columns>
        <columns>Status__c</columns>
        <columns>Introduced_Date__c</columns>
        <columns>SLA_Type__c</columns>
        <columns>SLA_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>SV-{000000}</displayFormat>
        <label>Security Vulnerability</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Vulnerability (In Beta)</pluralLabel>
    <recordTypes>
        <fullName>Snyk</fullName>
        <active>true</active>
        <label>Snyk</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>SLA_Due_Date_later_than_SLA_Start_Date</fullName>
        <active>true</active>
        <description>SLA Due Date must be after the SLA Start Date</description>
        <errorConditionFormula>SLA_Due_Date__c &lt;= SLA_Start_Date__c</errorConditionFormula>
        <errorDisplayField>SLA_Due_Date__c</errorDisplayField>
        <errorMessage>SLA Due Date must be after the SLA Start Date</errorMessage>
    </validationRules>
</CustomObject>